--- a/Frontend/.env
+++ b/Frontend/.env
@@ -1,2 +1,1 @@
-VITE_APP_BACKEND_URL=http://localhost:3000
-# https://pre-hackthon-assignment-level-supermind.onrender.com
+VITE_APP_BACKEND_URL="https://socialmediaanalyticsbackend.vercel.app"
