--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,15 +1,21 @@
 {
-    "version": 2,
-    "builds": [
+  "headers": [
       {
-        "src": "server.js",
-        "use": "@vercel/node"
+          "source": "/(.*)",
+          "headers": [
+              {
+                  "key": "Access-Control-Allow-Origin",
+                  "value": "https://social-media-analytics-n1bc.vercel.app"
+              },
+              {
+                  "key": "Access-Control-Allow-Methods",
+                  "value": "GET, POST, PUT, DELETE, OPTIONS"
+              },
+              {
+                  "key": "Access-Control-Allow-Headers",
+                  "value": "Content-Type, Authorization"
+              }
+          ]
       }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "server.js"
-      }
-    ]
-  }
+  ]
+}
