--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,21 +1,34 @@
 {
-  "headers": [
+    "version": 2,
+    "builds": [
       {
-          "source": "/(.*)",
-          "headers": [
-              {
-                  "key": "Access-Control-Allow-Origin",
-                  "value": "https://social-media-analytics-n1bc.vercel.app"
-              },
-              {
-                  "key": "Access-Control-Allow-Methods",
-                  "value": "GET, POST, PUT, DELETE, OPTIONS"
-              },
-              {
-                  "key": "Access-Control-Allow-Headers",
-                  "value": "Content-Type, Authorization"
-              }
-          ]
+        "src": "server.js",
+        "use": "@vercel/node"
       }
-  ]
-}
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "server.js"
+      }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://social-media-analytics-n1bc.vercel.app"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, PUT, DELETE, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization"
+                }
+            ]
+        }
+    ]
+  }
