--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,15 +1,16 @@
 {
-  "version": 2,
-  "builds": [
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/api/$1" }
+    ],
+    "headers": [
       {
-          "src": "server.js",
-          "use": "@vercel/node"
+        "source": "/runFlow",
+        "headers": [
+          { "key": "Access-Control-Allow-Origin", "value": "*" },
+          { "key": "Access-Control-Allow-Methods", "value": "GET,POST,OPTIONS" },
+          { "key": "Access-Control-Allow-Headers", "value": "Content-Type,Authorization" }
+        ]
       }
-  ],
-  "routes": [
-      {
-          "src": "/(.*)",
-          "dest": "server.js"
-      }
-  ]
-}
+    ]
+  }
+  
